<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diy_ros2</name>
  <version>0.0.0</version>
  <description>Meta package containing everything to run an DIY robot or simulation with ROS2</description>
  <maintainer email="jodle001@me.com">Jacob Odle</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
